fix broken action button overlap on build page

--- a/css/inner/builds.less
+++ b/css/inner/builds.less
@@ -46,9 +46,6 @@
   td {
     width: 40%;
     padding: 0 .5em;
-    &:not(:last-child) {
-      white-space: nowrap;
-    }
   }
   .build-status {
     padding: 2px 5px;
